Updated the project submission form to fix the margin spacing for some of the Question text and the InputField so that they are not squished together

--- a/client/src/Pages/PortalProjects/PortalProjects.module.scss
+++ b/client/src/Pages/PortalProjects/PortalProjects.module.scss
@@ -16,6 +16,8 @@
 .Question {
     margin-bottom: -15px;
     margin-top: 15px;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .Minor {
