--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -9,6 +9,7 @@
   height: 52px;
   //   border: 1px solid red;
   position: relative;
+  margin-left: 1em;
   margin-top: 1.2em;
   margin-bottom: 10px;
   overflow: visible;
