--- a/client/src/components/ProjectCard/ProjectCard.module.scss
+++ b/client/src/components/ProjectCard/ProjectCard.module.scss
@@ -1,6 +1,7 @@
 .ProjectCardInfo {
     display: flex;
     position: relative;
+    margin-top: 1em;
     height: 24em;
     width: 20em;
     border: 2px solid var(--borderColor);
